organize some code; add multiple level setup;

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
      
      </div>
     
-    <script src="main.js"></script>
+    <script src="scripts/preload.js" type="module"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
 
